dark mode now stored in localstorage fixed color transition

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,5 +3,6 @@
 @tailwind utilities;
 
 * {
-    @apply transition-colors duration-300;
+    transition: color 1000ms ease-in-out;
+    transition: background-color 1000ms ease-in-out;
 }
